# nix-flakes

./: README.md  flake.nix  pyproject.toml
nix/: shared.nix
pythonedaartifactsharednixflakes/: nix_flake.py
