[tool.poetry]
name = "pythoneda-artifact-shared-nix-flakes"
version = "0.0.1a2"
description = "Shared kernel for nix flakes in artifact space"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
homepage = "https://github.com/pythoneda-artifact-shared/nix-flakes"
packages = [{include = "pythonedaartifactsharednixflakes"}]

[tool.poetry.dependencies]
python = "^3.8"
pythoneda-base = "^0.0.1a16"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
